--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "scripts": {
     "dev": "webpack -d --watch"
   },
-  "dependencies": {},
+  "dependencies": {
+    "mongoose": "^5.1.3",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0"
+  },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
@@ -22,8 +26,6 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.0",
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0",
     "webpack": "^4.10.2",
     "webpack-cli": "^2.1.4"
   }
