--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "webpack -d --watch"
   },
   "dependencies": {
+    "express": "^4.16.3",
     "mongoose": "^5.1.3",
     "react": "^16.4.0",
     "react-dom": "^16.4.0"
