--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bluebird": "^3.5.1",
     "express": "^4.16.3",
     "mongoose": "^5.1.3",
     "react": "^16.4.0",
