--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "node": ">=6.13.0"
   },
   "scripts": {
-    "dev": "webpack -d --watch"
+    "dev": "webpack -d --watch",
+    "start": "nodemon ./server/index.js"
   },
   "dependencies": {
     "axios": "^0.18.0",
