--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "dev": "webpack -d --watch",
-    "start": "nodemon ./server/index.js"
+    "start": "nodemon ./server/index.js",
+    "test": "jest"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
+    "babel-jest": "^23.0.1",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
@@ -34,7 +36,9 @@
     "eslint-plugin-react": "^7.8.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^23.1.0",
     "mini-css-extract-plugin": "^0.4.0",
+    "regenerator-runtime": "^0.11.1",
     "webpack": "^4.10.2",
     "webpack-cli": "^2.1.4"
   }
