--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "test": "jest",
     "build": "webpack --mode production"
   },
+  "jest": {
+    "setupTestFrameworkScriptFile": "./__test__/test-setup.js"
+  },
   "dependencies": {
     "axios": "^0.18.0",
     "bluebird": "^3.5.1",
@@ -29,6 +32,8 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
@@ -39,6 +44,7 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.1.0",
     "mini-css-extract-plugin": "^0.4.0",
+    "react-test-renderer": "^16.4.0",
     "regenerator-runtime": "^0.11.1",
     "webpack": "^4.10.2",
     "webpack-cli": "^2.1.4"
