--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "mini-css-extract-plugin": "^0.4.0",
     "react-test-renderer": "^16.4.0",
     "regenerator-runtime": "^0.11.1",
+    "style-loader": "^0.21.0",
     "webpack": "^4.10.2",
     "webpack-cli": "^2.1.4"
   }
