--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "dev": "webpack -d --watch",
-    "start": "nodemon ./server/index.js",
+    "start": "node ./server/index.js",
     "test": "jest",
     "build": "webpack --mode production"
   },
